@@ -202,10 +202,10 @@ LIST(APPEND WebCore_LIBRARIES
   ${FONTCONFIG_LIBRARIES}
   ${FREETYPE_LIBRARIES}
   ${ICU_LIBRARIES}
-  ${JPEG_LIBRARY}
+  ${JPEG_LIBRARIES}
   ${LIBXML2_LIBRARIES}
   ${LIBXSLT_LIBRARIES}
-  ${PNG_LIBRARY}
+  ${PNG_LIBRARIES}
   ${SQLITE_LIBRARIES}
   ${GLIB_LIBRARIES}
   ${GLIB_GIO_LIBRARIES}
